2018-01-04  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Remove unnecessary includes in conv.

	* conv/conv.cxx, conv/convfact.h, conv/tis620.h, conv/utf8.h:
	  - Remove stdio.h include artifacts.
	* conv/conv.cxx:
	  - Remove unnecessary "utf8.h" and "tis620.h" includes, as
	    they are all realizations of "convkit.h" abstractions.
	    "convfact.h" already provides all necessary abstractions.

2018-01-04  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Replace the last malloc() with new[] operator.

	* src/convutil.cpp (ConvPrint()):
	  - Replace malloc() call with C++ new[] operator.
	  - Remove now-unneeded stdlib.h include.
	* configure.ac:
	  - Remove unnecessary check for malloc.h.

2018-01-04  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Remove unnecessary check for unused strstr().

	* configure.ac:
	  - Remove check for strstr(), which is never used.

2018-01-04  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Remove the dead midatrie stuffs.

	* configure.ac:
	  - Remove comment lines for using midatrie. It has been dead.
	  - Move the datrie check up to library checks phase.

2017-11-28  Theppitak Karoonboonyanan <theppitak@gmail.com>

	* NEWS:
	  === Version 0.6.0 ===

2017-11-27  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Revise manpage.

	* src/swath.1:
	  - Improve wordings.
	  - Mention trietool(1) instead of trietool-0.2(1).

2017-11-26  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Remove LinkSep terminator.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Remove LinkSep[] terminator assignment, which was previously
	    required by ReverseLinkSep(), where LinkSep[] was processed
	    from start to end.

2017-11-24  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Merge loop in MaxWordSeg::saveSegment().

	* src/maxwordseg.cpp (MaxWordSeg::saveSegment()):
	  - Optimize array access using pointers.
	  - Merge extra iteration on the last element into the main loop,