@@ -1,7 +1,7 @@
 //
 // utf8.cc - UTF-8 Text Agents
 // Created: 19 Jan 1999
-// Author:  Theppitak Karoonboonyanan <thep@links.nectec.or.th>
+// Author:  Theppitak Karoonboonyanan <theppitak@gmail.com>
 //
 
 #include "utf8.h"
