@@ -1,7 +1,7 @@
 //
 // utf8.h - UTF-8 Agents
 // Created: 19 Jan 1999
-// Author:  Theppitak Karoonboonyanan <thep@links.nectec.or.th>
+// Author:  Theppitak Karoonboonyanan <theppitak@gmail.com>
 //
 
 #ifndef UTF8_INC
